[tool.poetry]
name = "ncbi-scraper"
version = "0.1.0"
description = ""
authors = ["ikarabulut <i.karabulut93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
